crates/data-dict/tests/snapshots/validate_data__list_enum_membership_checked.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: animals
    source:
      parquet: data.parquet
    columns:
      - name: name
        type: string
        examples: [otter, seal]
      - name: addr
        type: struct
        fields:
          - name: zip
            type: string
            examples: ['97201']
          - name: country
            type: enum
            values: [US, CA, XX]
      - name: tags
        type: list(enum)
        values: [a, b]
────────────────────────────────────────
error[D04]: An enum column's values must all be among its declared `values`.
  --> dict.yaml:22:17
   |
LL |   - name: animals
...
LL |       - name: tags
LL |         type: list(enum)
LL |         values: [a, b]
   |                 ^^^^^^ has 1 value outside the allowed set (`zz`; row: 2)
