crates/data-dict/tests/snapshots/validate_data__nested_list_checks_compose.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: matrix
    source:
      parquet: matrix.parquet
    columns:
      - name: grid
        type: list(list(enum))
        constraints: [required]
        values: [a, b]
────────────────────────────────────────
error[D01]: A required column must not contain nulls.
  --> dict.yaml:10:23
   |
LL |   - name: matrix
...
LL |       - name: grid
LL |         type: list(list(enum))
LL |         constraints: [required]
   |                       ^^^^^^^^ has 1 null value (row: 3)
error[D04]: An enum column's values must all be among its declared `values`.
  --> dict.yaml:11:17
   |
LL |   - name: matrix
...
LL |       - name: grid
...
LL |         values: [a, b]
   |                 ^^^^^^ has 1 value outside the allowed set (`zz`; row: 2)
